--- a/common/common.html
+++ b/common/common.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" type="text/css" href="/css/affix.css">
         <link rel="stylesheet" type="text/css" href="/css/button.css">
         <link rel="stylesheet" type="text/css" href="/css/barHeader.css">
+        <link rel="stylesheet" type="text/css" href="/css/footer.css">
         <link rel="stylesheet" type="text/css" href="/css/header.css">
         <link rel="stylesheet" type="text/css" href="/css/input.css">
         <link rel="stylesheet" type="text/css" href="/css/mobile.css">
@@ -27,7 +28,7 @@
         <link rel="stylesheet" type="text/css" href="/css/special.css">
         <link rel="stylesheet" type="text/css" href="/css/touch.css">
         <link rel="stylesheet" type="text/css" href="/css/pagination.css">
-        <link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_jd64824bh5nx9a4i.css">
+        <link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_zoqlptz0yue4s4i.css">
         <link rel="stylesheet" type="text/css" href="/css/sprite.css">
 
 
