--- a/frame/frame.html
+++ b/frame/frame.html
@@ -31,7 +31,7 @@
 </div>
 
 <div id="frameBox" class="container1200">
-    <div class="box" data-title="frame1" data-block="1">
+    <div class="box" data-title="frame1" data-block="1" data-des="3列，左右浮动中margin">
          <div class="frame1 testFrame">
              <div class="frame1-left"></div>
              <div class="frame1-right"></div>
