--- a/iconGroup/iconGroup.html
+++ b/iconGroup/iconGroup.html
@@ -33,6 +33,65 @@
 		</div>
 	</div>	
 	<div id="iconGroupBox" class="" ><!-- data-set="set" -->
+
+
+
+		<div class="box" data-title="iconGroup04" data-type="iconGroup">
+			<div class="iconGroup04 clear" data-type="button">
+				<div class="row">
+					<div class="block row-3-block link-zone">
+						<a class="link-wrapper">
+							<div class="circle_c_link">
+								<img class="img-center" src="/img/icon001.png">
+							</div>
+							<div class="LinkText">关于我们</div>
+						</a>
+					</div>
+					<div class="block row-3-block link-zone">
+						<a class="link-wrapper">
+							<div class="circle_c_link">
+								<img class="img-center" src="/img/icon002.png">
+							</div>
+							<div class="LinkText">产品检测范围</div>
+						</a>
+					</div>
+					<div class="block row-3-block link-zone">
+						<a class="link-wrapper">
+							<div class="circle_c_link">
+								<img class="img-center" src="/img/icon001.png">
+							</div>
+							<div class="LinkText">关于我们</div>
+						</a>
+					</div>
+					<div class="block row-3-block link-zone">
+						<a class="link-wrapper">
+							<div class="circle_c_link">
+								<img class="img-center" src="/img/icon002.png">
+							</div>
+							<div class="LinkText">产品检测范围</div>
+						</a>
+					</div>
+					<div class="block row-3-block link-zone">
+						<a class="link-wrapper">
+							<div class="circle_c_link">
+								<img class="img-center" src="/img/icon001.png">
+							</div>
+							<div class="LinkText">关于我们</div>
+						</a>
+					</div>
+					<div class="block row-3-block link-zone">
+						<a class="link-wrapper">
+							<div class="circle_c_link">
+								<img class="img-center" src="/img/icon002.png">
+							</div>
+							<div class="LinkText">产品检测范围</div>
+						</a>
+					</div>
+				</div>
+			</div>
+
+		</div>
+
 		<div class="box" data-block="3" data-title="iconGroup03" data-type="iconGroup">
 			<div class="row-3-block float-r">
 				<ul class="btnGroup1">
