--- a/pagination/pagination.html
+++ b/pagination/pagination.html
@@ -33,6 +33,27 @@
     </div>
 </div>
 <div id="paginationBox" class="" ><!-- data-set="set" -->
+    <div class="box" data-block="2" data-title="pagination3" data-type="pagination">
+        <div class="align-center">
+        <div class="pagination03" data-type="pagination">
+
+            <ul class="float-l">
+                <li class="left"><a>上一页</a></li>
+                <li class=""><a>1</a></li>
+                <li class=""><a>2</a></li>
+                <li class="on"><a>3</a></li>
+                <li class=""><a>4</a></li>
+                <li class=""><a>5</a></li>
+
+                <li class="last"><a>末页</a></li>
+                <li class="right"><a>下一页</a></li>
+
+            </ul>
+            <div class="info float-l">共6页,177条记录</div>
+        </div>
+        </div>
+    </div>
+
     <div class="box" data-block="2" data-title="pagination2" data-type="pagination">
         <div class="pagination2" data-type="pagination">
             <ul>
