--- a/slider/slider.html
+++ b/slider/slider.html
@@ -33,7 +33,7 @@
 		</div>
 	</div>	
 	
-	<div id="sliderBox" class="container1200">
+	<div id="sliderBox" class="">
 		<!-- affix 放在最前面 -->
     <div class="box">
         <!-- floatwindow start-->
@@ -67,8 +67,246 @@
        </script>
     </div>
 
-       <div class="box" data-block="1" data-plugin="superslide" data-p-casename="slider07" data-title="slider07">
-           <div id="slider07" class="slideBox07 product_gallary">
+    <div class="box" data-plugin="superslide" data-p-casename="slider08" data-title="slider08">
+        <div class="slider08 ">
+
+            <div class="relative container-1150">
+                <div class="prev arrows"></div>
+                <div class="hr2-inner">
+
+                    <ul class="hsul">
+                        <!-- 循环体 -->
+                        <li class="hspt">
+                            <div class="str-inner">
+                                <div class="hsptBlock ">
+                                    <div class="img">
+                                        <img src="/img/naver_pics01.png">
+
+                                    </div>
+                                    <div class="hspt-bottom">
+
+                                        <div class="text">
+                                            <div class="hspt_title">微营销解决方案</div>
+                                            <div class="hspt_text">开启PC+手机+APP全网分销新时代传统企业可将线下渠道一键上线，实现线上线下互通,客户倍增。</div>
+                                        </div>
+
+                                        <ul class="link">
+
+                                            <li class="linkBlock">
+                                                <div class="str-inner">
+                                                    <div class="link-inner"><img src="/img/naver_pics01.png"></div>
+                                                </div>
+                                            </li>
+                                            <li class="linkBlock">
+                                                <div class="str-inner">
+                                                    <div class="link-inner"><img src="/img/naver_pics01.png"></div>
+                                                </div>
+                                            </li>
+                                            <li class="linkBlock">
+                                                <div class="str-inner">
+                                                    <div class="link-inner"><img src="/img/naver_pics01.png"></div>
+                                                </div>
+                                            </li>
+
+                                            <li class="linkBlock">
+                                                <div class="str-inner">
+                                                    <div class="link-inner"><img src="/img/naver_pics01.png"></div>
+                                                </div>
+                                            </li>
+
+                                        </ul>
+                                        <p class="hspt-p align-right"><a>进入微分销专题页 &gt;</a></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <!-- 循环体 -->
+                        <li class="hspt">
+                            <div class="str-inner">
+                                <div class="hsptBlock ">
+                                    <div class="img">
+                                        <img src="/img/naver_pics01.png">
+
+                                    </div>
+                                    <div class="hspt-bottom">
+
+                                        <div class="text">
+                                            <div class="hspt_title">微营销解决方案</div>
+                                            <div class="hspt_text">开启PC+手机+APP全网分销新时代传统企业可将线下渠道一键上线，实现线上线下互通,客户倍增。</div>
+                                        </div>
+
+                                        <ul class="link">
+
+                                            <li class="linkBlock">
+                                                <div class="str-inner">
+                                                    <div class="link-inner"><img src="/img/naver_pics01.png"></div>
+                                                </div>
+                                            </li>
+                                            <li class="linkBlock">
+                                                <div class="str-inner">
+                                                    <div class="link-inner"><img src="/img/naver_pics01.png"></div>
+                                                </div>
+                                            </li>
+                                            <li class="linkBlock">
+                                                <div class="str-inner">
+                                                    <div class="link-inner"><img src="/img/naver_pics01.png"></div>
+                                                </div>
+                                            </li>
+
+                                            <li class="linkBlock">
+                                                <div class="str-inner">
+                                                    <div class="link-inner"><img src="/img/naver_pics01.png"></div>
+                                                </div>
+                                            </li>
+
+                                        </ul>
+                                        <p class="hspt-p align-right"><a>进入微分销专题页 &gt;</a></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="hspt">
+                            <div class="str-inner">
+                                <div class="hsptBlock ">
+                                    <div class="img">
+                                        <img src="/img/naver_pics01.png">
+
+                                    </div>
+                                    <div class="hspt-bottom">
+
+                                        <div class="text">
+                                            <div class="hspt_title">微营销解决方案</div>
+                                            <div class="hspt_text">开启PC+手机+APP全网分销新时代传统企业可将线下渠道一键上线，实现线上线下互通,客户倍增。</div>
+                                        </div>
+
+                                        <ul class="link">
+
+                                            <li class="linkBlock">
+                                                <div class="str-inner">
+                                                    <div class="link-inner"><img src="/img/naver_pics01.png"></div>
+                                                </div>
+                                            </li>
+                                            <li class="linkBlock">
+                                                <div class="str-inner">
+                                                    <div class="link-inner"><img src="/img/naver_pics01.png"></div>
+                                                </div>
+                                            </li>
+                                            <li class="linkBlock">
+                                                <div class="str-inner">
+                                                    <div class="link-inner"><img src="/img/naver_pics01.png"></div>
+                                                </div>
+                                            </li>
+
+                                            <li class="linkBlock">
+                                                <div class="str-inner">
+                                                    <div class="link-inner"><img src="/img/naver_pics01.png"></div>
+                                                </div>
+                                            </li>
+
+                                        </ul>
+                                        <p class="hspt-p align-right"><a>进入微分销专题页 &gt;</a></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="hspt">
+                            <div class="str-inner">
+                                <div class="hsptBlock ">
+                                    <div class="img">
+                                        <img src="/img/naver_pics01.png">
+
+                                    </div>
+                                    <div class="hspt-bottom">
+
+                                        <div class="text">
+                                            <div class="hspt_title">微营销解决方案</div>
+                                            <div class="hspt_text">开启PC+手机+APP全网分销新时代传统企业可将线下渠道一键上线，实现线上线下互通,客户倍增。</div>
+                                        </div>
+
+                                        <ul class="link">
+
+                                            <li class="linkBlock">
+                                                <div class="str-inner">
+                                                    <div class="link-inner"><img src="/img/naver_pics01.png"></div>
+                                                </div>
+                                            </li>
+                                            <li class="linkBlock">
+                                                <div class="str-inner">
+                                                    <div class="link-inner"><img src="/img/naver_pics01.png"></div>
+                                                </div>
+                                            </li>
+                                            <li class="linkBlock">
+                                                <div class="str-inner">
+                                                    <div class="link-inner"><img src="/img/naver_pics01.png"></div>
+                                                </div>
+                                            </li>
+
+                                            <li class="linkBlock">
+                                                <div class="str-inner">
+                                                    <div class="link-inner"><img src="/img/naver_pics01.png"></div>
+                                                </div>
+                                            </li>
+
+                                        </ul>
+                                        <p class="hspt-p align-right"><a>进入微分销专题页 &gt;</a></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="next arrows"></div>
+            </div>
+        </div>
+        <script type="text/javascript">
+           function slider08(){
+                var vis = 3;
+                var half = Math.floor(vis/2);
+                var getAllLi = false;
+                var slider = $(".slider08");
+                var lis = slider.find(".hspt"),blocks,active,resetUl = false,index;
+                lis.each(function(i,e){
+                    $(e).addClass("hspt-"+(i+1));  /*标上序号与startfun 的i对应*/
+                })
+                slider.slide({
+                    mainCell:".hsul",effect:"leftLoop",autoPlay:true,
+                    vis:vis,
+                    startFun:function(i,c){
+                        var pageNum = i+1;
+                        if(!getAllLi){
+                            lis = slider.find(".hspt");
+                            blocks = lis/*.find(".hsptBlock")*/;
+                            getAllLi = true;
+                        }
+                        blocks.removeClass("on");
+
+
+                        if(resetUl && pageNum == 1){
+                            blocks.eq(index + 1).addClass("on");
+                        }
+                        if (resetUl && pageNum == c) {
+                            blocks.eq(index - 1).addClass("on");
+                        }
+
+                        /*表示下一次要到最后一个或第一个，要重置到初始位置了*/
+                        if(pageNum == c || pageNum == 1){
+                            resetUl = true;
+                        }else{
+                            resetUl = false;
+                        }
+                        active = slider.find(".hspt.hspt-"+pageNum+"").not(".clone");
+                        index = lis.index(active) +  half;         /*获取中间位置*/
+                        blocks.eq(index).addClass("on");
+
+                    }
+
+                });
+            }
+        </script>
+    </div>
+
+    <div class="box" data-block="1" data-plugin="superslide" data-p-casename="slider07" data-title="slider07">
+           <div id="slider07" class="slider07 product_gallary">
 
                <div class="direction">
                    <div class="sprev directionBtn"><i class="iconfont icon-back-o" aria-hidden="true"></i></div>
