--- a/tab/tab.html
+++ b/tab/tab.html
@@ -35,7 +35,7 @@
 	<div id="tabBox" class="" ><!-- data-set="set" -->
 
 		<div class="box " data-block="1" data-plugin="superslide" data-p-caseName="tab09" data-type="tab" data-title="tab09">
-			<div id="tab09" class="slideTxtBox textTab01 riBlock marginBottom" >
+			<div id="tab09" class="slideTxtBox tab09 riBlock marginBottom" >
 				<div class="hd">
 
 					<ul>
@@ -50,7 +50,7 @@
 				</div>
 				<div class="bd">
 					<div class="switch">
-						<div class="product_gallary">
+						<div class="product_gallary slider07">
 
 							<div class="direction">
 								<div class="sprev directionBtn"><i class="iconfont icon-back-o" aria-hidden="true"></i></div>
@@ -62,7 +62,7 @@
 										<li class="row-block">
 											<div class="inner">
 												<div class="gInner">
-													<img src="img/slider01.png">
+													<img src="/img/slider01.png">
 													<div class="text">图说新区</div>
 												</div>
 											</div>
@@ -70,7 +70,7 @@
 										<li class="row-block">
 											<div class="inner">
 												<div class="gInner">
-													<img src="img/slider01.png">
+													<img src="/img/slider01.png">
 													<div class="text">图说新区</div>
 												</div>
 											</div>
@@ -78,7 +78,7 @@
 										<li class="row-block">
 											<div class="inner">
 												<div class="gInner">
-													<img src="img/slider01.png">
+													<img src="/img/slider01.png">
 													<div class="text">图说新区</div>
 												</div>
 											</div>
@@ -86,7 +86,7 @@
 										<li class="row-block">
 											<div class="inner">
 												<div class="gInner">
-													<img src="img/slider01.png">
+													<img src="/img/slider01.png">
 													<div class="text">图说新区</div>
 												</div>
 											</div>
@@ -94,7 +94,7 @@
 										<li class="row-block">
 											<div class="inner">
 												<div class="gInner">
-													<img src="img/slider01.png">
+													<img src="/img/slider01.png">
 													<div class="text">图说新区</div>
 												</div>
 											</div>
@@ -102,7 +102,7 @@
 										<li class="row-block">
 											<div class="inner">
 												<div class="gInner">
-													<img src="img/slider01.png">
+													<img src="/img/slider01.png">
 													<div class="text">图说新区</div>
 												</div>
 											</div>
@@ -116,11 +116,11 @@
 
 					</div>
 					<div class="switch">
-						<div class="product_gallary">
+						<div class="product_gallary slider07">
 
 							<div class="direction">
-								<div class="sprev directionBtn"><i class="fa fa-angle-left" aria-hidden="true"></i></div>
-								<div class="snext directionBtn"><i class="fa fa-angle-right" aria-hidden="true"></i></div>
+								<div class="sprev directionBtn"><i class="iconfont icon-back-o" aria-hidden="true"></i></div>
+								<div class="snext directionBtn"><i class="iconfont icon-forward-o" aria-hidden="true"></i></div>
 							</div>
 							<div class="gallary">
 								<div class="bd row">
@@ -128,7 +128,7 @@
 										<li class="row-block">
 											<div class="inner">
 												<div class="gInner">
-													<img src="img/slider01.png">
+													<img src="/img/slider01.png">
 													<div class="text">图说新区</div>
 												</div>
 											</div>
@@ -136,7 +136,7 @@
 										<li class="row-block">
 											<div class="inner">
 												<div class="gInner">
-													<img src="img/slider01.png">
+													<img src="/img/slider01.png">
 													<div class="text">图说新区</div>
 												</div>
 											</div>
@@ -144,7 +144,7 @@
 										<li class="row-block">
 											<div class="inner">
 												<div class="gInner">
-													<img src="img/slider01.png">
+													<img src="/img/slider01.png">
 													<div class="text">图说新区</div>
 												</div>
 											</div>
@@ -152,7 +152,7 @@
 										<li class="row-block">
 											<div class="inner">
 												<div class="gInner">
-													<img src="img/slider01.png">
+													<img src="/img/slider01.png">
 													<div class="text">图说新区</div>
 												</div>
 											</div>
@@ -160,7 +160,7 @@
 										<li class="row-block">
 											<div class="inner">
 												<div class="gInner">
-													<img src="img/slider01.png">
+													<img src="/img/slider01.png">
 													<div class="text">图说新区</div>
 												</div>
 											</div>
@@ -168,7 +168,7 @@
 										<li class="row-block">
 											<div class="inner">
 												<div class="gInner">
-													<img src="img/slider01.png">
+													<img src="/img/slider01.png">
 													<div class="text">图说新区</div>
 												</div>
 											</div>
@@ -187,7 +187,9 @@
 			<script type="text/javascript">
 
                 function tab09() {
+
                     jQuery("#tab09 .product_gallary").slide({mainCell:".gallary ul",prevCell:".sprev",nextCell:".snext",vis:5,effect:"leftLoop"});
+                    jQuery("#tab09").slide();
                 }
 
 			</script>
